[package]
name = "testouille"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
magic-crypt = "3.1.13"
rand = "0.8.5"
short-crypt = "1.0.28"
#winapi = "0.3.9"
winapi = { version = "0.3.9", features = ["winuser", "winreg", "lmaccess"] }
