[package]
name = "Client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
base64 = "0.21.0"
block-modes = "0.9.1"
cbc = "0.1.2"
cipher = "0.4.3"
crypter = "0.1.1"
magic = "0.13.0"
magic-crypt = "3.1.12"
pkcs7 = "0.3.0"
rand = "0.8.5"
short-crypt = "1.0.27"
